[gd_scene load_steps=3 format=3 uid="uid://evc6pglbeeqm"]

[ext_resource type="Script" uid="uid://chu2dthd0eiuk" path="res://scenes/ui/settings/pause_menu.gd" id="1_etvbu"]
[ext_resource type="PackedScene" uid="uid://cda7pxyq1ugar" path="res://scenes/ui/settings/Options Container.tscn" id="2_etvbu"]

[node name="PauseMenu" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_etvbu")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="Open Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Main Menu" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="Close" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Close"

[node name="Options" parent="." instance=ExtResource("2_etvbu")]
visible = false
layout_mode = 2

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
ok_button_text = "Yes"
dialog_text = "Quit (no saving!)"

[connection signal="pressed" from="VBoxContainer/Open Options" to="." method="_on_open_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Main Menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/Close" to="." method="_on_close_pressed"]
[connection signal="canceled" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_canceled"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_confirmed"]
